--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "private": true,
   "dependencies": {
+    "aws-lambda": "^1.0.7",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
@@ -19,6 +20,7 @@
     "@nx/linter": "16.6.0",
     "@nx/node": "16.6.0",
     "@nx/workspace": "16.6.0",
+    "@types/aws-lambda": "^8.10.119",
     "@types/jest": "^29.4.0",
     "@types/node": "~18.7.1",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
